--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "source": [
     "# import linear algebra and data manipulation libraries\n",
     "import numpy as np\n",
@@ -38,7 +38,7 @@
     "from torchvision import datasets, transforms\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"src/\")\n",
+    "sys.path.append(\"../src/\")\n",
     "import image_utils\n",
     "from image_utils import add_flipped_and_rotated_images\n",
     "from simple_conv_nn import SimpleCNN"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "source": [
     "def load_data():\n",
     "    print(\"Loading data \\n\")\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "source": [
     "categories = ['bee', 'cat', 'cow', 'dog', 'duck', 'horse', 'pig', 'rabbit', 'snake', 'whale']\n",
     "\n",
@@ -150,14 +150,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "source": [
     "classes_dict = {}\n",
     "for key, value in URL_DATA.items():\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "source": [
     "classes_dict"
    ],
@@ -251,14 +251,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "source": [
     "len(classes_dict['dog'])"
    ],
@@ -271,14 +271,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "source": [
     "len(classes_dict['cat'])"
    ],
@@ -291,14 +291,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "source": [
     "# Generate labels and add labels to loaded data\n",
     "for i, (key, value) in enumerate(classes_dict.items()):\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "source": [
     "classes_dict['bee']"
    ],
@@ -332,14 +332,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "source": [
     "classes_dict['bee'][0]"
    ],
@@ -508,14 +508,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "source": [
     "label_dict = {0:'bee', 1:'cat', 2:'cow', 3:'dog', 4:'duck',\n",
     "              5:'horse', 6:'pig', 7:'rabbit', 8:'snake', 9:'whale'}\n",
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "source": [
     "len(doodles)"
    ],
@@ -543,14 +543,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "source": [
     "doodles[0]"
    ],
@@ -719,14 +719,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 14
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "source": [
     "y = doodles[:,-1].astype('float32')\n",
     "X = doodles[:,:784]"
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "source": [
     "y"
    ],
@@ -749,14 +749,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "source": [
     "len(y)"
    ],
@@ -769,14 +769,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
    ],
@@ -1087,26 +1087,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "source": [
     "def save_data(X_train, y_train, X_test, y_test, force = False):\n",
     "    \n",
     "    # Check for already saved files\n",
-    "    if not(path.exists('data/xtrain.pickle')) or force:\n",
+    "    if not(path.exists('../data/xtrain.pickle')) or force:\n",
     "        # Save X_train dataset as a pickle file\n",
-    "        with open('data/xtrain.pickle', 'wb') as f:\n",
+    "        with open('../data/xtrain.pickle', 'wb') as f:\n",
     "            pickle.dump(X_train, f)\n",
     "\n",
     "        # Save X_test dataset as a pickle file\n",
-    "        with open('data/xtest.pickle', 'wb') as f:\n",
+    "        with open('../data/xtest.pickle', 'wb') as f:\n",
     "            pickle.dump(X_test, f)\n",
     "\n",
     "        # Save y_train dataset as a pickle file\n",
-    "        with open('data/ytrain.pickle', 'wb') as f:\n",
+    "        with open('../data/ytrain.pickle', 'wb') as f:\n",
     "            pickle.dump(y_train, f)\n",
     "\n",
     "        # Save y_test dataset as a pickle file\n",
-    "        with open('data/ytest.pickle', 'wb') as f:\n",
+    "        with open('../data/ytest.pickle', 'wb') as f:\n",
     "            pickle.dump(y_test, f)"
    ],
    "outputs": [],
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "source": [
     "save_data(X_train, y_train, X_test, y_test)"
    ],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "source": [
     "type(X_train)"
    ],
@@ -1136,14 +1136,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 42
+     "execution_count": 23
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "source": [
     "type(X_test)"
    ],
@@ -1156,14 +1156,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 24
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "source": [
     "type(y_train)"
    ],
@@ -1176,14 +1176,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 44
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "source": [
     "len(X_train)"
    ],
@@ -1196,7 +1196,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 26
     }
    ],
    "metadata": {}
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 27,
    "source": [
     "def build_model_rnn(input_size, output_size, dropout = 0.0):\n",
     "    model = nn.Sequential(OrderedDict([\n",
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 28,
    "source": [
     "rnn_model = build_model_rnn(input_size=784, output_size=10)"
    ],
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "source": [
     "rnn_model   "
    ],
@@ -1277,7 +1277,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 106
+     "execution_count": 29
     }
    ],
    "metadata": {}
